@@ -101,5 +101,22 @@ namespace Computator.NET
             logger.MethodName = MethodBase.GetCurrentMethod().Name;
             logger.Log(Strings.Program_CurrentDomain_UnhandledException_Unhandled_UI_Exception, ErrorType.General, ex);
         }
+
+
+        // DO NOT DELETE THIS CODE UNLESS WE NO LONGER REQUIRE ASSEMBLY A!!!
+        private static void DummyFunctionToMakeSureReferencesGetCopiedProperly_DO_NOT_DELETE_THIS_CODE()
+        {
+            // Assembly A is used by this file, and that assembly depends on assembly B,
+            // but this project does not have any code that explicitly references assembly B. Therefore, when another project references
+            // this project, this project's assembly and the assembly A get copied to the project's bin directory, but not
+            // assembly B. So in order to get the required assembly B copied over, we add some dummy code here (that never
+            // gets called) that references assembly B; this will flag VS/MSBuild to copy the required assembly B over as well.
+            var dummyType = typeof(System.Runtime.CompilerServices.AsyncTaskMethodBuilder);//System.Threading.Tasks.dll
+            Console.WriteLine(dummyType.FullName);
+
+            dummyType = typeof(System.Runtime.CompilerServices.AsyncStateMachineAttribute);//System.Runtime.dll
+
+            Console.WriteLine(dummyType.FullName);
+        }
     }
 }
