@@ -6,5 +6,8 @@
   <package id="jacobslusser.ScintillaNET" version="3.5.6" targetFramework="net4" />
   <package id="MathNet.Numerics" version="3.11.1" targetFramework="net40" />
   <package id="Meta.Numerics" version="3.0.0" targetFramework="net4" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="SimpleLogger.NET" version="2.0.0.0" targetFramework="net40" />
 </packages>
