@@ -75,6 +75,7 @@ Alternatively, you can always solve equations graphically, simply by looking at 
 # Minimum system requirements
 
 * **.NET Framework** **4.0 Full** or later (https://www.microsoft.com/en-US/download/details.aspx?id=17718) (included by installer)
+* .NET 4.0 **KB2468871** update (included by installer)
 * **Microsoft Visual C++ 2015 Update 2 Redistributable Package** (vc_redist 14.0.23918) (included by installer)
 * Operating system **Windows XP SP3** or later (**Windows Vista** or later is recommended, **Windows 10** is the best option because of continous testing on it)
 * Processor **1 GHz** or faster
